# skill

./: readme.md
.claude/: settings.json
duanju-skill/: duanju-skill.md
official-document-drafting-main/prompts/doc-types/letter-函/: examples.md
video-use-main/: .env.example  .gitignore  README.md  SKILL.md  install.md  poster.html  pyproject.toml
video-use-main/helpers/: pack_transcripts.py  render.py  timeline_view.py  transcribe.py  transcribe_batch.py
xianyu-paqu/: skill.md  xianyu-paqu.md
